# SimpleRag

./: .gitignore  pyproject.toml
data/multirepresentation_vecstore/: chroma.sqlite3
src/simple_rag/: __init__.py
src/simple_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/simple_rag/common/: ai_utils.py  common.py
src/simple_rag/notebooks/: test_rag.ipynb
src/simple_rag/rag_graph/: decision_makers.py  graph.py
src/simple_rag/rag_graph/edges/: edges.py
src/simple_rag/rag_graph/states/: doc_grader_state.py  generate_state.py  graph_state.py  query_transform_state.py  retrieve_state.py  web_search_state.py
src/simple_rag/simple_chain/: simple_chain.py
src/simple_rag/storage/: multi_representation_storage.py
src/simple_rag/storage/classes/: file_based_byte_store.py
